# DSCopilot

./: .gitignore  app.py  main.py  pyproject.toml  test.csv
